--- a/pushup-tracker/frontend/src/component/components/user/edit/UsersEditor.css
+++ b/pushup-tracker/frontend/src/component/components/user/edit/UsersEditor.css
@@ -32,6 +32,7 @@
     display: block;
     padding: 10px;
     border: 1px solid #202020;
+    margin: 5px 0 20px 0;
     outline: none;
 
     font-size: 15px;
